// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exec info > logs additional info about pre-releases > logs additional info about pre-releases 1`] = `
"
Proxy Settings: none detected
Environment Variables: none detected

Application Data: [36m/user/app/data/path[39m
Browser Profiles: [36m/user/app/data/path/to/browsers[39m
Binary Caches: [36m/user/path/to/binary/cache[39m

Cypress Version: [32m0.0.0-development[39m [31m(pre-release)[39m
System Platform: [32mlinux[39m ([32mFoo - OsVersion[39m)
System Memory: [32m1.2 GB[39m free [32m400 MB[39m

This is a [31mpre-release[39m build of Cypress.
Build info:
  Commit SHA: [32mabc123[39m
  Commit Branch: [32msomeBranchName[39m
  Commit Date: [32m2022-02-02T00:00:00.000Z[39m
"
`;

exports[`exec info > logs if unbuilt development > logs additional info about development 1`] = `
"
Proxy Settings: none detected
Environment Variables: none detected

Application Data: [36m/user/app/data/path[39m
Browser Profiles: [36m/user/app/data/path/to/browsers[39m
Binary Caches: [36m/user/path/to/binary/cache[39m

Cypress Version: [32m0.0.0-development[39m [31m(pre-release)[39m
System Platform: [32mlinux[39m ([32mFoo - OsVersion[39m)
System Memory: [32m1.2 GB[39m free [32m400 MB[39m

This is the [31mdevelopment[39m (un-built) Cypress CLI.
"
`;

exports[`exec info > prints collected info without env vars > cypress info without browsers or vars 1`] = `
"
Proxy Settings: none detected
Environment Variables: none detected

Application Data: [36m/user/app/data/path[39m
Browser Profiles: [36m/user/app/data/path/to/browsers[39m
Binary Caches: [36m/user/path/to/binary/cache[39m

Cypress Version: [32m0.0.0-development[39m [32m(stable)[39m
System Platform: [32mlinux[39m ([32mFoo - OsVersion[39m)
System Memory: [32m1.2 GB[39m free [32m400 MB[39m
"
`;

exports[`exec info > prints proxy and cypress env vars > cypress info with proxy and vars 1`] = `
"
Proxy Settings:
HTTP_PROXY: [32msome proxy variable[39m
HTTPS_PROXY: [32manother proxy variable[39m
NO_PROXY: [32mno proxy variable[39m

Learn More: [34m[4mhttps://on.cypress.io/proxy-configuration[24m[39m

Environment Variables:
CYPRESS_ENV_VAR1: [32mmy Cypress variable[39m
CYPRESS_ENV_VAR2: [32mmy other Cypress variable[39m

Application Data: [36m/user/app/data/path[39m
Browser Profiles: [36m/user/app/data/path/to/browsers[39m
Binary Caches: [36m/user/path/to/binary/cache[39m

Cypress Version: [32m0.0.0-development[39m [32m(stable)[39m
System Platform: [32mlinux[39m ([32mFoo - OsVersion[39m)
System Memory: [32m1.2 GB[39m free [32m400 MB[39m
"
`;

exports[`exec info > redacts sensitive cypress variables > cypress info without browsers or vars 1`] = `
"{
  dev: false,
  env: {
    TEST: 'true',
    VITEST: 'true',
    NODE_ENV: 'test',
    VITEST_MODE: 'RUN',
    FORCE_TTY: 'true',
    NVM_INC: '/Users/cacie/.nvm/versions/node/v22.15.1/include/node',
    npm_package_nx_targets_build_cli_outputs_0: '{projectRoot}/types',
    npm_package_nx_targets_build_cli_outputs_1: '{projectRoot}/build',
    npm_package_exports___vue_require: './vue/dist/cypress-vue.cjs.js',
    npm_package_exports___types_net_stubbing_types: './types/net-stubbing.d.ts',
    npm_package_dependencies_semver: '^7.7.1',
    npm_package_scripts_size: 't="cypress-v0.0.0.tgz"; yarn pack --filename "\${t}"; wc -c "\${t}"; tar tvf "\${t}"; rm "\${t}";',
    TERM_PROGRAM: 'vscode',
    NODE: '/Users/cacie/.nvm/versions/node/v22.15.1/bin/node',
    npm_package_nx_targets_build_cli_dependsOn_0: 'prebuild',
    npm_package_exports___svelte_types: './svelte/dist/index.d.ts',
    npm_package_exports___mount_utils_require: './mount-utils/dist/index.js',
    npm_package_dependencies_tmp: '~0.2.4',
    npm_package_dependencies_process: '^0.11.10',
    INIT_CWD: '/Users/cacie/git/cypress/cli',
    NVM_CD_FLAGS: '-q',
    _P9K_TTY: '/dev/ttys007',
    npm_package_devDependencies_typescript: '~5.9.2',
    npm_package_dependencies_is_installed_globally: '~0.4.0',
    npm_config_version_git_tag: 'true',
    SHELL: '/bin/zsh',
    TERM: 'xterm-256color',
    npm_package_dependencies_yauzl: '^2.10.0',
    npm_package_dependencies_enquirer: '^2.3.6',
    npm_package_dependencies_cachedir: '^2.3.0',
    npm_package_exports___angular_require: './angular/dist/index.js',
    npm_package_exports___vue_types: './vue/dist/index.d.ts',
    npm_package_dependencies_eventemitter2: '6.4.7',
    TMPDIR: '/var/folders/g4/15yxjhzs4bd01m_s6cscgxfw0000gq/T/',
    HOMEBREW_REPOSITORY: '/opt/homebrew',
    npm_package_exports___react_import: './react/dist/cypress-react.esm-bundler.js',
    npm_package_dependencies_arch: '^2.2.0',
    npm_package_scripts_lint: 'eslint --ext .ts,.tsx,.json,.vue .',
    npm_config_init_license: 'MIT',
    TERM_PROGRAM_VERSION: '1.6.23',
    npm_package_devDependencies__types_chai: '4.2.15',
    npm_package_dependencies_request_progress: '^3.0.0',
    npm_package_dependencies_debug: '^4.3.4',
    npm_package_scripts_dtslint: 'dtslint types',
    npm_package_dependencies_cli_table3: '0.6.1',
    MallocNanoZone: '0',
    ORIGINAL_XDG_CURRENT_DESKTOP: 'undefined',
    CURSOR_TRACE_ID: 'f69a9a3ffa8a4019b6a60f87d162b432',
    ZDOTDIR: '/Users/cacie',
    npm_package_bin_cypress: 'bin/cypress',
    npm_package_devDependencies__cypress_mount_utils: '0.0.0-development',
    npm_package_dependencies_tree_kill: '1.2.2',
    npm_package_dependencies__types_sinonjs__fake_timers: '8.1.1',
    npm_package_devDependencies__types_mocha: '8.0.3',
    npm_package_dependencies_hasha: '5.2.2',
    npm_package_private: 'true',
    npm_config_registry: 'https://registry.yarnpkg.com',
    ZSH: '/Users/cacie/.oh-my-zsh',
    PNPM_HOME: '/Users/cacie/Library/pnpm',
    npm_package_devDependencies_shelljs: '0.8.5',
    npm_package_dependencies_minimist: '^1.2.8',
    npm_package_readmeFilename: 'README.md',
    npm_package_dependencies_dayjs: '^1.10.4',
    USER: 'cacie',
    NVM_DIR: '/Users/cacie/.nvm',
    npm_package_description: 'The CLI is used to build the [cypress npm module](https://www.npmjs.com/package/cypress) to be run within a terminal.',
    npm_package_dependencies_supports_color: '^8.1.1',
    LS_COLORS: 'di=1;36:ln=35:so=32:pi=33:ex=31:bd=34;46:cd=34;43:su=30;41:sg=30;46:tw=30;42:ow=30;43',
    npm_package_exports___package_json_require: './package.json',
    npm_package_devDependencies__cypress_svelte: '0.0.0-development',
    COMMAND_MODE: 'unix2003',
    npm_package_scripts_prebuild: 'yarn postinstall && tsx ./scripts/start-build.ts',
    npm_package_exports___import: './dist/index.mjs',
    npm_package_devDependencies__cypress_vue: '0.0.0-development',
    SSH_AUTH_SOCK: '/private/tmp/com.apple.launchd.X5pb2TMnIb/Listeners',
    npm_package_dependencies_ospath: '^1.2.2',
    npm_package_dependencies_lodash: '^4.17.21',
    __CF_USER_TEXT_ENCODING: '0x1F7:0x0:0x0',
    VSCODE_PROFILE_INITIALIZED: '1',
    npm_package_dependencies_buffer: '^5.7.1',
    npm_execpath: '/Users/cacie/.nvm/versions/node/v22.15.1/lib/node_modules/yarn/bin/yarn.js',
    npm_package_dependencies_bluebird: '^3.7.2',
    PAGER: 'less',
    npm_package_devDependencies_tsx: '4.20.5',
    npm_package_scripts_build_cli: 'tsc && tsc -p tsconfig.esm.json && tsx ./scripts/build.ts && tsx ./scripts/post-build.ts',
    npm_package_devDependencies_dependency_check: '4.1.0',
    npm_package_scripts_test_debug: 'npx vitest --inspect-brk --no-file-parallelism --test-timeout=0',
    LSCOLORS: 'Gxfxcxdxbxegedabagacad',
    npm_package_devDependencies_resolve_pkg: '2.0.0',
    npm_package_devDependencies__packages_root: '0.0.0-development',
    npm_package_devDependencies_dtslint: '4.2.1',
    npm_package_dependencies_figures: '^3.2.0',
    PATH: '/var/folders/g4/15yxjhzs4bd01m_s6cscgxfw0000gq/T/yarn--1758043578588-0.3332757009438376:/Users/cacie/git/cypress/cli/node_modules/.bin:/Users/cacie/.config/yarn/link/node_modules/.bin:/Users/cacie/git/cypress/node_modules/.bin:/Users/cacie/.nvm/versions/node/v22.15.1/libexec/lib/node_modules/npm/bin/node-gyp-bin:/Users/cacie/.nvm/versions/node/v22.15.1/lib/node_modules/npm/bin/node-gyp-bin:/Users/cacie/.nvm/versions/node/v22.15.1/bin/node_modules/npm/bin/node-gyp-bin:/var/folders/g4/15yxjhzs4bd01m_s6cscgxfw0000gq/T/yarn--1758043578305-0.12595681601512054:/Users/cacie/git/cypress/cli/node_modules/.bin:/Users/cacie/.config/yarn/link/node_modules/.bin:/Users/cacie/git/cypress/node_modules/.bin:/Users/cacie/.yarn/bin:/Users/cacie/.nvm/versions/node/v22.15.1/libexec/lib/node_modules/npm/bin/node-gyp-bin:/Users/cacie/.nvm/versions/node/v22.15.1/lib/node_modules/npm/bin/node-gyp-bin:/Users/cacie/.nvm/versions/node/v22.15.1/bin/node_modules/npm/bin/node-gyp-bin:/Users/cacie/.nvm/versions/node/v22.15.1/bin:/Applications/CMake.app/Contents/bin:/Users/cacie/.nvm/versions/node/v20.18.3/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/System/Cryptexes/App/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin:/usr/local/MacGPG2/bin:/Users/cacie/Library/pnpm:/Applications/CMake.app/Contents/bin:/Users/cacie/.nvm/versions/node/v20.18.3/bin',
    npm_config_argv: '{"remain":[],"cooked":["run","test"],"original":["test"]}',
    npm_package_dependencies_listr2: '^3.8.3',
    npm_package_scripts_postinstall: 'patch-package && tsx ./scripts/post-install.ts',
    npm_package_devDependencies__types_sinon_chai: '3.2.12',
    npm_package_scripts_test_dependencies: 'dependency-check . --missing --no-dev --verbose',
    _: '/Users/cacie/git/cypress/cli/node_modules/.bin/vitest',
    npm_package_devDependencies__cypress_grep: '0.0.0-development',
    __CFBundleIdentifier: 'com.todesktop.230313mzl4w4u92',
    USER_ZDOTDIR: '/Users/cacie',
    npm_package_workspaces_nohoist_1: 'tsx',
    npm_package_dependencies_systeminformation: '5.27.7',
    npm_package_dependencies_extract_zip: '2.0.1',
    PWD: '/Users/cacie/git/cypress/cli',
    npm_package_workspaces_nohoist_0: '@types/*',
    VSCODE_NONCE: '8c864130-d300-424e-8724-33eee5b612ad',
    npm_package_devDependencies__types_lodash: '4.14.168',
    P9K_SSH: '0',
    npm_lifecycle_event: 'test-unit',
    npm_package_dependencies_blob_util: '^2.0.2',
    LANG: 'en_US.UTF-8',
    P9K_TTY: 'old',
    npm_package_types: 'types',
    npm_package_name: 'cypress',
    npm_package_dependencies_executable: '^4.1.1',
    npm_package_exports___package_json_import: './package.json',
    npm_package_exports___types: './types/index.d.ts',
    npm_config_version_commit_hooks: 'true',
    npm_config_progress: '',
    XPC_FLAGS: '0x0',
    VSCODE_GIT_ASKPASS_EXTRA_ARGS: '',
    npm_package_devDependencies_vitest: '^3.2.4',
    npm_package_devDependencies__types_minimatch: '3.0.5',
    npm_package_devDependencies_mock_fs: '5.4.0',
    npm_package_devDependencies__cypress_sinon_chai: '2.9.1',
    npm_config_bin_links: 'true',
    npm_package_engines_node: '^20.1.0 || ^22.0.0 || >=24.0.0',
    npm_package_dependencies_commander: '^6.2.1',
    npm_config_wrap_output: '',
    npm_package_exports___svelte_import: './svelte/dist/cypress-svelte.esm-bundler.js',
    npm_package_dependencies_proxy_from_env: '1.0.0',
    npm_package_main: 'dist/index.js',
    XPC_SERVICE_NAME: '0',
    npm_package_exports___vue_import: './vue/dist/cypress-vue.esm-bundler.js',
    npm_package_devDependencies_execa_wrap: '1.4.0',
    npm_package_version: '0.0.0-development',
    VSCODE_INJECTION: '1',
    npm_package_devDependencies_strip_ansi: '6.0.1',
    HOME: '/Users/cacie',
    SHLVL: '3',
    npm_package_exports___angular_import: './angular/dist/index.js',
    npm_package_dependencies_untildify: '^4.0.0',
    VSCODE_GIT_ASKPASS_MAIN: '/Applications/Cursor.app/Contents/Resources/app/extensions/git/dist/askpass-main.js',
    npm_package_dependencies__cypress_xvfb: '^1.2.4',
    npm_package_scripts_test: 'yarn test-unit',
    npm_package_devDependencies__cypress_angular: '0.0.0-development',
    npm_config_save_prefix: '^',
    npm_config_strict_ssl: 'true',
    npm_config_loglevel: 'warn',
    HOMEBREW_PREFIX: '/opt/homebrew',
    npm_package_exports___react_require: './react/dist/cypress-react.cjs.js',
    npm_package_devDependencies_cross_env: '7.0.3',
    npm_package_devDependencies__cypress_react: '0.0.0-development',
    npm_config_version_git_message: 'v%s',
    npm_config_save_exact: 'true',
    npm_package_dependencies_cli_cursor: '^3.1.0',
    npm_package_dependencies_chalk: '^4.1.0',
    LOGNAME: 'cacie',
    LESS: '-R',
    YARN_WRAP_OUTPUT: 'false',
    npm_package_devDependencies_nock: '13.2.9',
    npm_package_devDependencies__types_chai_jquery: '1.1.40',
    npm_package_dependencies_fs_extra: '^9.1.0',
    npm_package_dependencies_execa: '4.1.0',
    npm_package_dependencies__cypress_request: '^3.0.9',
    npm_lifecycle_script: 'vitest run',
    npm_package_exports___require: './dist/index.js',
    VSCODE_GIT_IPC_HANDLE: '/var/folders/g4/15yxjhzs4bd01m_s6cscgxfw0000gq/T/vscode-git-87ab79f983.sock',
    npm_package_nx_implicitDependencies_0: '@cypress/*',
    npm_package_dependencies_pretty_bytes: '^5.6.0',
    npm_package_dependencies__types_tmp: '^0.2.3',
    npm_config_package_lock: '',
    npm_package_exports___mount_utils_types: './mount-utils/dist/index.d.ts',
    npm_package_devDependencies__types_sinon: '9.0.9',
    NVM_BIN: '/Users/cacie/.nvm/versions/node/v22.15.1/bin',
    npm_package_dependencies_log_symbols: '^4.0.0',
    npm_package_dependencies__types_sizzle: '^2.3.2',
    npm_package_files_3: 'mount-utils',
    npm_config_version_git_sign: '',
    npm_config_ignore_scripts: '',
    npm_config_user_agent: 'yarn/1.22.22 npm/? node/v22.15.1 darwin arm64',
    HOMEBREW_CELLAR: '/opt/homebrew/Cellar',
    INFOPATH: '/opt/homebrew/share/info:/opt/homebrew/share/info:',
    GIT_ASKPASS: '/Applications/Cursor.app/Contents/Resources/app/extensions/git/dist/askpass.sh',
    VSCODE_GIT_ASKPASS_NODE: '/Applications/Cursor.app/Contents/Frameworks/Cursor Helper (Plugin).app/Contents/MacOS/Cursor Helper (Plugin)',
    npm_package_exports___angular_types: './angular/dist/index.d.ts',
    npm_package_files_2: 'types/**/*.d.ts',
    npm_package_scripts_types: 'yarn dtslint',
    _P9K_SSH_TTY: '/dev/ttys007',
    npm_package_exports___react_types: './react/dist/index.d.ts',
    npm_package_files_1: 'dist',
    npm_package_dependencies_common_tags: '^1.8.0',
    npm_package_files_0: 'bin',
    npm_package_devDependencies__types_jquery: '3.3.31',
    npm_package_files_7: 'svelte',
    npm_package_devDependencies__types_bluebird: '3.5.33',
    npm_package_dependencies_ci_info: '^4.1.0',
    npm_config_init_version: '1.0.0',
    npm_config_ignore_optional: '',
    npm_package_files_6: 'angular',
    npm_package_scripts_clean: 'tsx ./scripts/clean.ts',
    npm_package_exports___svelte_require: './svelte/dist/cypress-svelte.cjs.js',
    npm_package_files_5: 'react',
    COLORTERM: 'truecolor',
    npm_node_execpath: '/Users/cacie/.nvm/versions/node/v22.15.1/bin/node',
    npm_package_files_4: 'vue',
    npm_package_scripts_test_unit: 'vitest run',
    npm_config_version_tag_prefix: 'v',
    PROD: '',
    DEV: '1',
    BASE_URL: '/',
    MODE: 'test',
    TINYPOOL_WORKER_ID: '9',
    VITEST_WORKER_ID: '9',
    VITEST_POOL_ID: '9',
    SSR: '1'
  },
  detached: false,
  stdio: [ 'inherit', 'inherit', 'pipe' ]
}
"
`;

exports[`exec info > redacts sensitive cypress variables > cypress redacts sensitive vars 1`] = `
"
Proxy Settings: none detected
Environment Variables:
CYPRESS_ENV_VAR1: [32mmy Cypress variable[39m
CYPRESS_ENV_VAR2: [32mmy other Cypress variable[39m
CYPRESS_PROJECT_ID: [32mabc123[39m
CYPRESS_RECORD_KEY: [32m<redacted>[39m

Application Data: [36m/user/app/data/path[39m
Browser Profiles: [36m/user/app/data/path/to/browsers[39m
Binary Caches: [36m/user/path/to/binary/cache[39m

Cypress Version: [32m0.0.0-development[39m [32m(stable)[39m
System Platform: [32mlinux[39m ([32mFoo - OsVersion[39m)
System Memory: [32m1.2 GB[39m free [32m400 MB[39m
"
`;
